# ai-agent

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  zentra-agent.postman_collection.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  geo.py  llm.py  logging_format.py  main.py  target_time.py  text.py
app/adapters/: __init__.py
app/agent/: __init__.py  intent.py  loop.py  planner.py  runner.py  stream_adapter.py  trip_state.py
app/api/: __init__.py  agent.py  internal_auth.py
app/conversations/: __init__.py  repository.py  title.py
app/db/: __init__.py  supabase_client.py
app/schemas/: __init__.py  chat.py  events.py  preferences.py  recommendations.py  tools.py
app/tools/: __init__.py  attractions.py  catalog.py  crowd.py  itinerary.py  places.py  preferences.py  recommendations.py  recommendations_itinerary.py  registry.py  time.py
docs/: NOTES.md
tests/: conftest.py  test_agent_stream.py  test_attractions_tool.py  test_config.py  test_conversation_persistence.py  test_conversation_title.py  test_crowd_tool.py  test_intent.py  test_internal_auth.py  test_itinerary_tool.py  test_llm.py  test_logging_format.py  test_places_tool.py  test_planner.py  test_preferences_tool.py  test_recommendations_itinerary_tool.py  test_recommendations_schema.py  test_schemas.py  test_stream_adapter.py  test_target_time.py  test_text.py  test_time_tool.py  test_trip_state.py  test_trip_state_repository.py
