[project]
name = "zentra-agent"
version = "0.1.0"
description = "Backend-only AI route planning agent for Zentra."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "fastmcp",
  "langgraph",
  "langchain",
  "langchain-openai",
  "supabase",
  "PyJWT[crypto]",
  "structlog",
  "orjson",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

